add length for book audios to mapping

--- a/config/mappings/core/App.Entities.BookAudio.dcm.yml
+++ b/config/mappings/core/App.Entities.BookAudio.dcm.yml
@@ -15,6 +15,10 @@ App\Entities\BookAudio:
               type: string
               length: 255
 
+            length:
+              type: integer
+              comment: 'by seconds'
+
             createdAt:
               type: datetime
 
