default createdAt and updatedAt

--- a/config/mappings/core/App.Entities.Post.dcm.yml
+++ b/config/mappings/core/App.Entities.Post.dcm.yml
@@ -23,6 +23,8 @@ App\Entities\Post:
 
       createdAt:
         type: datetime
+        options:
+          default: Carbon\Carbon
 
       updatedAt:
         type: datetime
