--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,7 @@ APP_URL=http://localhost
 APP_EMAIL_ADDRESS=
 APP_EMAIL_NAME=
 
-DB_CONNECTION=sqlite
-DB_DATABASE=database/database.sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
