user entity add columns

--- a/config/mappings/core/App.Entities.User.dcm.yml
+++ b/config/mappings/core/App.Entities.User.dcm.yml
@@ -45,6 +45,14 @@ App\Entities\User:
             length: 100
             nullable: true
 
+        account:
+            type: string
+            length: 60
+
+        profileImage:
+            type: string
+            length: 255
+
         lastLogin:
             type: datetime
             nullable: true
