--- a/.env.example
+++ b/.env.example
@@ -45,3 +45,8 @@ DOCTRINE_PROXY_AUTOGENERATE=true
 TWIG_AUTO_RELOAD=true
 TWIG_STRICT_VARIABLES=true
 TWIG_STORAGE_PATH='cache/twig'
+
+STEEM_ACCOUNT=fornaxstudio
+STEEM_ABOUT=https://steemit.com/
+STEEM_RULES=https://steemit.com/
+STEEM_HOW_TO=https://steemit.com/
