add book author relation

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -34,3 +34,8 @@ App\Entities\Book:
         post:
           targetEntity: App\Entities\Post
           cascade: [ 'persist' ]
+
+      manyToOne:
+        author:
+          targetEntity: App\Entities\Author
+          cascade: [ 'persist' ]
