--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,10 @@ TWIG_AUTO_RELOAD=true
 TWIG_STRICT_VARIABLES=true
 TWIG_STORAGE_PATH='cache/twig'
 
+STEEM_KEY=
+STEEM_SECRET=
+STEEM_REDIRECT_URI=
+
 STEEM_ACCOUNT=fornaxstudio
 STEEM_ABOUT=https://steemit.com/
 STEEM_RULES=https://steemit.com/
