--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
         "php": ">=7",
         "beberlei/assert": "~2.7",
         "eloquent/enumeration": "~5.1",
+        "laravel-doctrine/acl": "~1.0",
+        "laravel-doctrine/migrations": "~1.1",
+        "laravel-doctrine/orm": "~1.3",
         "laravel/framework": "~5.4",
         "laravelcollective/html": "~5.4",
-        "laravel-doctrine/orm": "~1.3",
-        "laravel-doctrine/migrations": "~1.1",
-        "laravel-doctrine/acl": "~1.0",
         "predis/predis": "~1.1",
+        "socialiteproviders/steem": "^1.0",
         "somnambulist/laravel-doctrine-behaviours": "~0.5",
         "somnambulist/laravel-doctrine-domain-events": "~0.7",
         "somnambulist/laravel-doctrine-entity-audit": "~0.5",
