profile image can be null, account is unique

--- a/config/mappings/core/App.Entities.User.dcm.yml
+++ b/config/mappings/core/App.Entities.User.dcm.yml
@@ -45,10 +45,12 @@ App\Entities\User:
         account:
             type: string
             length: 60
+            unique: true
 
         profileImage:
             type: string
             length: 255
+            nullable: TRUE
 
         lastLogin:
             type: datetime
