upload to s3 done

--- a/.env.example
+++ b/.env.example
@@ -57,5 +57,5 @@ STEEM_HOW_TO=https://steemit.com/
 
 S3_KEY=AKIAJADI7PBZUF4W4NTQ
 S3_SECRET=Mt/bfZ4VjFjhCxIP4+qnX5mvf7SrDZk1HXrnDJqh
-S3_REGION=us-west
+S3_REGION=us-west-2
 S3_BUCKET=dngo-io
