--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "laravel-doctrine/orm": "~1.3",
         "laravel/framework": "~5.4",
         "laravelcollective/html": "~5.4",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "predis/predis": "~1.1",
         "socialiteproviders/steem": "^1.0",
         "somnambulist/laravel-doctrine-behaviours": "~0.5",
