add chapter to BookAudio

--- a/config/mappings/core/App.Entities.BookAudio.dcm.yml
+++ b/config/mappings/core/App.Entities.BookAudio.dcm.yml
@@ -27,6 +27,10 @@ App\Entities\BookAudio:
             body:
               type: text
 
+            chapter:
+              type: integer
+
+
             fileSource:
               type: string
 
