add is_active to BookAudio

--- a/config/mappings/core/App.Entities.BookAudio.dcm.yml
+++ b/config/mappings/core/App.Entities.BookAudio.dcm.yml
@@ -30,6 +30,8 @@ App\Entities\BookAudio:
             chapter:
               type: integer
 
+            isActive:
+              type: boolean
 
             fileSource:
               type: string
