BookAudioTags structure is done

--- a/config/mappings/core/App.Entities.BookAudio.dcm.yml
+++ b/config/mappings/core/App.Entities.BookAudio.dcm.yml
@@ -48,3 +48,12 @@ App\Entities\BookAudio:
               targetEntity: App\Entities\User
             book:
               targetEntity: App\Entities\Book
+
+        manyToMany:
+            tags:
+                targetEntity: App\Entities\AudioTags
+                cascade: [ 'persist' ]
+                fetch: EXTRA_LAZY
+                indexBy: type
+                joinTable:
+                    name: book_audio_tags
