cache expire env

--- a/.env.example
+++ b/.env.example
@@ -46,16 +46,18 @@ TWIG_AUTO_RELOAD=true
 TWIG_STRICT_VARIABLES=true
 TWIG_STORAGE_PATH='cache/twig'
 
+CACHE_EXPIRES=10
+
 STEEM_KEY=
 STEEM_SECRET=
 STEEM_REDIRECT_URI=
 
-STEEM_ACCOUNT=fornaxstudio
+STEEM_ACCOUNT=dngo
 STEEM_ABOUT=https://steemit.com/
 STEEM_RULES=https://steemit.com/
 STEEM_HOW_TO=https://steemit.com/
 
-S3_KEY=AKIAJADI7PBZUF4W4NTQ
-S3_SECRET=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
-S3_REGION=us-west-2
-S3_BUCKET=dngo-io
+S3_KEY=
+S3_SECRET=
+S3_REGION=
+S3_BUCKET=
