add fulltext to book name

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -8,7 +8,9 @@ App\Entities\Book:
             columns: ["language"]
         year:
             columns: ["year"]
-
+        book_name:
+            columns: ['name']
+            flags: fulltext
       id:
         id:
             type: integer
