EAGER queries for Books/Author

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -50,3 +50,4 @@ App\Entities\Book:
         author:
           targetEntity: App\Entities\Author
           cascade: [ 'persist' ]
+          fetch: EAGER
