add gutenbergId and gutenbergFiles for book entity

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -37,7 +37,10 @@ App\Entities\Book:
             lenght: 255
         language:
             type: string
-
+        gutenbergId:
+            type: integer
+        gutenbergFiles:
+            type: json
         releaseDate:
             type: datetime
 
