--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,8 @@ STEEM_ABOUT=https://steemit.com/
 STEEM_RULES=https://steemit.com/
 STEEM_HOW_TO=https://steemit.com/
 
+STEEM_TAG=
+
 S3_KEY=
 S3_SECRET=
 S3_REGION=
