accessToken data type converted VARCHAR(255) to TEXT

--- a/config/mappings/core/App.Entities.User.dcm.yml
+++ b/config/mappings/core/App.Entities.User.dcm.yml
@@ -36,8 +36,8 @@ App\Entities\User:
             length: 255
 
         accessToken:
-            type: string
-            length: 255
+            type: text
+            length: 65535
             nullable: true
 
         rememberToken:
