post to steem event done, steem logs done

--- a/config/mappings/core/App.Entities.BookAudio.dcm.yml
+++ b/config/mappings/core/App.Entities.BookAudio.dcm.yml
@@ -36,6 +36,15 @@ App\Entities\BookAudio:
             fileSource:
               type: string
 
+            steemSlug:
+              type: string
+              length: 255
+              nullable: true
+
+            modComment:
+              type: text
+              nullable: true
+
             createdAt:
               type: datetime
 
