--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,7 @@ STEEM_RULES=https://steemit.com/
 STEEM_HOW_TO=https://steemit.com/
 
 STEEM_TAG=
+STEEM_BOT=
 
 S3_KEY=AKIAIMZXHTAHOWAIC7VQ
 S3_SECRET=Q4f0K7ReYM1qeFQU+m/DB4cV7vcfCPV8L1a86udY
