book entity mapping with extra fields

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -59,7 +59,7 @@ App\Entities\Book:
             nullable: true
 
         categories:
-            type: text
+            type: string
             nullable: true
 
         rights:
