if there is url, dont insert row

--- a/config/mappings/core/App.Entities.Crawler.dcm.yml
+++ b/config/mappings/core/App.Entities.Crawler.dcm.yml
@@ -1,6 +1,7 @@
 App\Entities\Crawler:
     type: entity
     table: crawler
+    repositoryClass: App\Repositories\CrawlerRepository
 
     indexes:
         idx_identifier:
