import done bebeyim

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -50,9 +50,11 @@ App\Entities\Book:
 
         gutenbergId:
             type: integer
+            nullable: true
 
         gutenbergFiles:
             type: json
+            nullable: true
 
         source: #url çak geç
             type: string
