files type from json to array

--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -53,7 +53,7 @@ App\Entities\Book:
             nullable: true
 
         gutenbergFiles:
-            type: json
+            type: array
             nullable: true
 
         source: #url çak geç
