--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
         "php": ">=7",
         "beberlei/assert": "~2.7",
         "eloquent/enumeration": "~5.1",
-        "frnxstd/steem-connect": "@dev",
+        "erusev/parsedown": "^1.7",
         "frnxstd/steem-api": "@dev",
+        "frnxstd/steem-connect": "@dev",
         "laravel-doctrine/acl": "~1.0",
         "laravel-doctrine/migrations": "~1.1",
         "laravel-doctrine/orm": "~1.3",
