log book audio id

--- a/config/mappings/core/App.Entities.SteemLogs.dcm.yml
+++ b/config/mappings/core/App.Entities.SteemLogs.dcm.yml
@@ -15,3 +15,7 @@ App\Entities\SteemLogs:
         type: json
       type:
         type: string
+
+    manyToOne:
+      bookAudio:
+        targetEntity: App\Entities\BookAudio
