--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "laravel/framework": "~5.4",
         "laravelcollective/html": "~5.4",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "michelf/php-markdown": "^1.8",
         "predis/predis": "~1.1",
         "socialiteproviders/steem": "^1.0",
         "somnambulist/laravel-doctrine-behaviours": "~0.5",
