create api controller for speech

--- a/config/mappings/core/App.Entities.Speech.dcm.yml
+++ b/config/mappings/core/App.Entities.Speech.dcm.yml
@@ -2,6 +2,12 @@ App\Entities\Speech:
     type: entity
     table: dngo_speech
 
+    indexes:
+        idx_module_name:
+            columns: [ module ]
+        idx_language:
+            columns: [ language ]
+
     id:
         id:
             type: integer
