--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ STEEM_KEY=
 STEEM_SECRET=
 STEEM_REDIRECT_URI=
 
+STEEM_EXPIRES=24
+
 STEEM_NODE=https://steemd-int.steemit.com
 
 STEEM_ACCOUNT=dngo
