save refresh token on login and DB schema update

--- a/config/mappings/core/App.Entities.User.dcm.yml
+++ b/config/mappings/core/App.Entities.User.dcm.yml
@@ -40,6 +40,11 @@ App\Entities\User:
             length: 65535
             nullable: true
 
+        refreshToken:
+            type: text
+            length: 65535
+            nullable: true
+
         rememberToken:
             type: string
             length: 100
