update docs for vagrant

--- a/Homestead.dist.yaml
+++ b/Homestead.dist.yaml
@@ -2,8 +2,8 @@
 ip: "192.168.10.150"
 memory: 2048
 cpus: 2
-hostname: laravel-doctrine-project
-name: laravel-doctrine-project
+hostname: dngo-project
+name: dngo-project
 provider: virtualbox
 mariadb: true
 
@@ -13,12 +13,12 @@ keys:
     - ~/.ssh/id_rsa
 
 folders:
-    - map: "/Users/<user>/Projects/laravel-doctrine-project"
-      to: "/home/vagrant/laravel-doctrine-project"
+    - map: "/Users/<user>/Projects/dngo-project"
+      to: "/home/vagrant/dngo-project"
 
 sites:
     - map: homestead.app
-      to: "/home/vagrant/laravel-doctrine-project/public"
+      to: "/home/vagrant/dngo-project/public"
 
 databases:
     - homestead
