--- a/.env.example
+++ b/.env.example
@@ -64,7 +64,9 @@ STEEM_HOW_TO=https://steemit.com/
 STEEM_TAG=
 STEEM_BOT=
 
-S3_KEY=AKIAIMZXHTAHOWAIC7VQ
-S3_SECRET=Q4f0K7ReYM1qeFQU+m/DB4cV7vcfCPV8L1a86udY
-S3_REGION=us-west-2
-S3_BUCKET=dngo-io
+S3_KEY=
+S3_SECRET=
+S3_REGION=
+S3_BUCKET=
+
+BUGSNAG_API_KEY=
