--- a/config/mappings/core/App.Entities.Book.dcm.yml
+++ b/config/mappings/core/App.Entities.Book.dcm.yml
@@ -78,6 +78,11 @@ App\Entities\Book:
         releaseDate:
             type: datetime
 
+        priority:
+            type: integer
+            options:
+                default: 99999
+
       oneToOne:
         post:
           targetEntity: App\Entities\Post
