--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "andreasindal/laravel-markdown": "1.1",
         "beberlei/assert": "~2.7",
         "bugsnag/bugsnag-laravel": "^2.0",
+        "dngo-io/cover-creator": "^1.3",
         "dngo-io/steem-api": "^1.0",
         "dngo-io/steem-connect": "^1.0",
         "eloquent/enumeration": "~5.1",
